[project]
name = "heart-disease-analysis-minor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib==1.3.2",
    "kaggle>=2.0.0",
    "matplotlib==3.8.0",
    "numpy==1.26.0",
    "pandas==2.2.0",
    "plotly==5.20.0",
    "scikit-learn==1.4.0",
    "seaborn==0.13.2",
    "streamlit==1.35.0",
    "xgboost==2.0.3",
]
